--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   pg-express-api:
     image: node:12-alpine
     restart: unless-stopped
-    command: sh -c "npm install && npm run start"
+    command: npm install && npm run start
     ports:
       - 5000:5000
     working_dir: /pg-express-api
