--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,25 @@
 version: "3"
 
+networks:
+  pg-express:
+    external: false
+
 services:
   pg-db:
     image: postgres
     restart: unless-stopped
     ports:
-      - "5001:5432"
+      - "5432:5432"
     environment:
       POSTGRES_USER: pg-user
       POSTGRES_DB: groceries
       POSTGRES_PASSWORD: pg-password
+    networks:
+      - pg-express
   pg-express-api:
     image: node:12-alpine
     restart: unless-stopped
-    command: npm install && npm run start
+    command: sh -c "npm install && npm run start"
     ports:
       - 5000:5000
     working_dir: /pg-express-api
@@ -27,7 +33,8 @@ services:
       USER: pg-user
       PASS: pg-password
       DB: groceries
-      PGPORT: 5001
+    networks:
+      - pg-express
 
 
 
